Enhance inventory setup with new item patterns and tooltips; update item images in HTML; add clear inventory functionality

--- a/index.html
+++ b/index.html
@@ -147,22 +147,22 @@
                           <div class="container">
                             <div class="hstack justify-content-center">
                               <div class="slot slot-inv itm-slot" id="item-slot-1">
-                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-1" draggable="true" data-original="true" data-item-name="crafter" />
+                                <img src="https://minecraft.wiki/images/Book_and_Quill_JE2_BE2.png?2128f" alt="Book and Quill" class="slot-image ms-0" id="Dragable-Item-1" draggable="true" data-original="true" data-item-name="book" />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-2">
-                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-2" draggable="true" data-original="true" data-item-name="Example-2" />
+                                <img src="https://minecraft.wiki/images/Feather_JE3_BE2.png?b869b" alt="Feather" class="slot-image ms-0" id="Dragable-Item-2" draggable="true" data-original="true" data-item-name="feather" />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-3">
-                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-3" draggable="true" data-original="true" data-item-name="book" />
+                                <img src="https://minecraft.wiki/images/Ink_Sac_JE2_BE2.png?133f5" alt="Ink Sac" class="slot-image ms-0" id="Dragable-Item-3" draggable="true" data-original="true" data-item-name="ink_sac" />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-4">
-                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-4" draggable="true" data-original="true" data-item-name="Example-4" />
+                                <img src="https://minecraft.wiki/images/Redstone_Dust_JE2_BE2.png?8cf17" alt="Redstone Dust" class="slot-image ms-0" id="Dragable-Item-4" draggable="true" data-original="true" data-item-name="redstone_dust" />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-5">
-                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-5" draggable="true" data-original="true" data-item-name="feather" />
+                                <img src="https://minecraft.wiki/images/Iron_Ingot_JE3_BE2.png?849cb" alt="Iron Ingot" class="slot-image ms-0" id="Dragable-Item-5" draggable="true" data-original="true" data-item-name="iron_ingot" />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-6">
-                                <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4&20240620151121" alt="Item" class="slot-image ms-0" id="Dragable-Item-6" draggable="true" data-original="true" data-item-name="ink_sac" />
+                                <img src="https://minecraft.wiki/images/Diamond_JE3_BE3.png?99d00" alt="Diamond" class="slot-image ms-0" id="Dragable-Item-6" draggable="true" data-original="true" data-item-name="diamond" />
                               </div>
                               <div class="slot slot-inv" style="visibility: hidden"></div>
                               <div class="slot slot-inv slot-btn MC-BTN-CLICK" id="item-slot-clear" data-tooltip data-title="Clear Items" data-body="Clear all Items in the inventory slots.">
@@ -172,7 +172,7 @@
                           </div>
                         </div>
                         <div class="col-12 order-1 order-xl-2 p-2 pt-3" style="font-family: 'MinecraftiaRegular', sans-serif">
-                          <div class="container-fluid h-100 w-100" style="overflow-y: auto; max-height: 120px">
+                          <div class="container-fluid h-100 w-100" style="overflow-y: auto; max-height: 120px" id="item-info-box">
                             <p class="my-1 mb-3 h6 fw-bolder" id="item-name">Item Name Placeholder</p>
                             <p class="text-wrap" style="font-size: 0.9rem; text-align: justify; text-indent: 1.2rem" id="item-description">
                               Item description placeholder. This is where the description of the selected item will be displayed. It can include details about the item's properties, usage, and any
