--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
           It's taking longer than usual to load the portfolio. This may be due to your internet connection or device performance.
         </p>
       </div>
+      <!-- Acheivement Toast Container -->
+      <!-- Main Content Container -->
       <div class="tooltips-Container position-relative">
         <div class="tooltip position-fixed" id="tooltip" style="display: none; pointer-events: none; z-index: 1070; top: 0; left: 0">
           <div class="tooltip-header text-warning" id="tooltip-header">Title</div>
@@ -147,27 +149,32 @@
                           <div class="container">
                             <div class="hstack justify-content-center">
                               <div class="slot slot-inv itm-slot" id="item-slot-1">
-                                <img src="https://minecraft.wiki/images/Book_and_Quill_JE2_BE2.png?2128f" alt="Book and Quill" class="slot-image ms-0" id="Dragable-Item-1" draggable="true" data-original="true" data-item-name="book" />
+                                <img src="https://minecraft.wiki/images/Iron_Ingot_JE3_BE2.png?849cb" alt="Iron Ingot" class="slot-image ms-0" id="Dragable-Item-1" draggable="true" data-original="true" data-item-name="iron_ingot" />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-2">
-                                <img src="https://minecraft.wiki/images/Feather_JE3_BE2.png?b869b" alt="Feather" class="slot-image ms-0" id="Dragable-Item-2" draggable="true" data-original="true" data-item-name="feather" />
+                                <img src="https://minecraft.wiki/images/Redstone_Dust_JE2_BE2.png?8cf17" alt="Redstone Dust" class="slot-image ms-0" id="Dragable-Item-2" draggable="true" data-original="true" data-item-name="redstone_dust" />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-3">
-                                <img src="https://minecraft.wiki/images/Ink_Sac_JE2_BE2.png?133f5" alt="Ink Sac" class="slot-image ms-0" id="Dragable-Item-3" draggable="true" data-original="true" data-item-name="ink_sac" />
+                                <img src="https://minecraft.wiki/images/Feather_JE3_BE2.png?b869b" alt="Feather" class="slot-image ms-0" id="Dragable-Item-3" draggable="true" data-original="true" data-item-name="feather" />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-4">
-                                <img src="https://minecraft.wiki/images/Redstone_Dust_JE2_BE2.png?8cf17" alt="Redstone Dust" class="slot-image ms-0" id="Dragable-Item-4" draggable="true" data-original="true" data-item-name="redstone_dust" />
+                                <img src="https://minecraft.wiki/images/Book_and_Quill_JE2_BE2.png?2128f" alt="Book and Quill" class="slot-image ms-0" id="Dragable-Item-4" draggable="true" data-original="true" data-item-name="book" />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-5">
-                                <img src="https://minecraft.wiki/images/Iron_Ingot_JE3_BE2.png?849cb" alt="Iron Ingot" class="slot-image ms-0" id="Dragable-Item-5" draggable="true" data-original="true" data-item-name="iron_ingot" />
+                                <img src="https://minecraft.wiki/images/Nether_Quartz_JE2_BE2.png?d0049" alt="Nether Quartz" class="slot-image ms-0" id="Dragable-Item-5" draggable="true" data-original="true" data-item-name="quartz" />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-6">
-                                <img src="https://minecraft.wiki/images/Diamond_JE3_BE3.png?99d00" alt="Diamond" class="slot-image ms-0" id="Dragable-Item-6" draggable="true" data-original="true" data-item-name="diamond" />
+                                <img src="https://minecraft.wiki/images/Ender_Pearl_JE3_BE2.png?829a7" alt="Ender Pearl" class="slot-image ms-0" id="Dragable-Item-6" draggable="true" data-original="true" data-item-name="ender_pearl" />
                               </div>
                               <div class="slot slot-inv" style="visibility: hidden"></div>
                               <div class="slot slot-inv slot-btn MC-BTN-CLICK" id="item-slot-clear" data-tooltip data-title="Clear Items" data-body="Clear all Items in the inventory slots.">
                                 <img src="./Assets/cancel.png" alt="Clear" class="slot-image" />
                               </div>
+                            </div>
+                            <div class="hstack mt-2 p-2 rounded-2 fw-bold" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 0.8rem; text-align: center;">
+                              <small id="inventory-instruction-text">
+                                You can drag and drop the items into the inventory slots. Try to match the correct patterns to unlock special skills!
+                              </small>
                             </div>
                           </div>
                         </div>
