--- a/index.html
+++ b/index.html
@@ -45,9 +45,21 @@
     <div id="PanoramaContainer" class="w-100 vh-100 position-relative overflow-hidden">
       <div id="LoadingScreen" class="loading-overlay d-flex flex-column justify-content-center align-items-center position-fixed top-0 start-0 w-100 h-100 z-1">
         <h1 id="LoadingText" class="text-white mb-3">Loading...</h1>
-        <p id="SubLoadingText" class="position-absolute bottom-0 w-100 text-center text-white pb-2 text-wrap d-none px-5" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 0.8rem">
+        <p id="SubLoadingText" class="position-absolute bottom-0 w-100 text-center pb-2 text-wrap d-none px-5">
           It's taking longer than usual to load the portfolio. This may be due to your internet connection or device performance.
         </p>
+      </div>
+      <!-- Hint Sidebar Container -->
+      <div class="position-relative">
+        <div class="hint-sidebar tooltip-box m-3 p-2">
+          <div class="hstack mb-2">
+            <span class="text-white" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 1rem">Hints & Tips</span>
+            <button type="button" class="ms-auto btn-close MC-BTN-CLICK nofocus btn-hint" id="HintContainer"></button>
+          </div>
+          <div class="vstack hint-content" id="hint-content">
+            <p class="mb-2">No hints available at the moment. Check back later for tips and tricks!</p>
+          </div>
+        </div>
       </div>
       <!-- Acheivement Toast Container -->
       <!-- Main Content Container -->
@@ -104,7 +116,10 @@
                               <div class="slot MC-BTN-CLICK leggings-slot" style="width: 48px; height: 48px" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
                               <div class="slot MC-BTN-CLICK boots-slot" style="width: 48px; height: 48px" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
                               <div class="slot my-2" style="width: 48px; height: 45px; visibility: hidden">5</div>
-                              <div class="slot elytra-slot" style="width: 48px; height: 48px; visibility: hidden">6</div>
+                              <div class="slot d-none" style="width: 48px; height: 48px;">6</div>
+                              <div class="slot slot-btn MC-BTN-CLICK" style="width: 48px; height: 48px;" data-tooltip data-title="Hint" data-body="Get hints and tips to unlock special skills!" id="hint-button">
+                                <img src="./Assets/warning_button.png" alt="Clear" class="slot-image" />
+                              </div>
                             </div>
                           </div>
                         </div>
@@ -149,32 +164,78 @@
                           <div class="container">
                             <div class="hstack justify-content-center">
                               <div class="slot slot-inv itm-slot" id="item-slot-1">
-                                <img src="https://minecraft.wiki/images/Iron_Ingot_JE3_BE2.png?849cb" alt="Iron Ingot" class="slot-image ms-0" id="Dragable-Item-1" draggable="true" data-original="true" data-item-name="iron_ingot" />
+                                <img
+                                  src="https://minecraft.wiki/images/Iron_Ingot_JE3_BE2.png?849cb"
+                                  alt="Iron Ingot"
+                                  class="slot-image ms-0"
+                                  id="Dragable-Item-1"
+                                  draggable="true"
+                                  data-original="true"
+                                  data-item-name="iron_ingot"
+                                />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-2">
-                                <img src="https://minecraft.wiki/images/Redstone_Dust_JE2_BE2.png?8cf17" alt="Redstone Dust" class="slot-image ms-0" id="Dragable-Item-2" draggable="true" data-original="true" data-item-name="redstone_dust" />
+                                <img
+                                  src="https://minecraft.wiki/images/Redstone_Dust_JE2_BE2.png?8cf17"
+                                  alt="Redstone Dust"
+                                  class="slot-image ms-0"
+                                  id="Dragable-Item-2"
+                                  draggable="true"
+                                  data-original="true"
+                                  data-item-name="redstone_dust"
+                                />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-3">
-                                <img src="https://minecraft.wiki/images/Feather_JE3_BE2.png?b869b" alt="Feather" class="slot-image ms-0" id="Dragable-Item-3" draggable="true" data-original="true" data-item-name="feather" />
+                                <img
+                                  src="https://minecraft.wiki/images/Feather_JE3_BE2.png?b869b"
+                                  alt="Feather"
+                                  class="slot-image ms-0"
+                                  id="Dragable-Item-3"
+                                  draggable="true"
+                                  data-original="true"
+                                  data-item-name="feather"
+                                />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-4">
-                                <img src="https://minecraft.wiki/images/Book_and_Quill_JE2_BE2.png?2128f" alt="Book and Quill" class="slot-image ms-0" id="Dragable-Item-4" draggable="true" data-original="true" data-item-name="book" />
+                                <img
+                                  src="https://minecraft.wiki/images/Book_and_Quill_JE2_BE2.png?2128f"
+                                  alt="Book and Quill"
+                                  class="slot-image ms-0"
+                                  id="Dragable-Item-4"
+                                  draggable="true"
+                                  data-original="true"
+                                  data-item-name="book"
+                                />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-5">
-                                <img src="https://minecraft.wiki/images/Nether_Quartz_JE2_BE2.png?d0049" alt="Nether Quartz" class="slot-image ms-0" id="Dragable-Item-5" draggable="true" data-original="true" data-item-name="quartz" />
+                                <img
+                                  src="https://minecraft.wiki/images/Nether_Quartz_JE2_BE2.png?d0049"
+                                  alt="Nether Quartz"
+                                  class="slot-image ms-0"
+                                  id="Dragable-Item-5"
+                                  draggable="true"
+                                  data-original="true"
+                                  data-item-name="quartz"
+                                />
                               </div>
                               <div class="slot slot-inv itm-slot" id="item-slot-6">
-                                <img src="https://minecraft.wiki/images/Ender_Pearl_JE3_BE2.png?829a7" alt="Ender Pearl" class="slot-image ms-0" id="Dragable-Item-6" draggable="true" data-original="true" data-item-name="ender_pearl" />
+                                <img
+                                  src="https://minecraft.wiki/images/Ender_Pearl_JE3_BE2.png?829a7"
+                                  alt="Ender Pearl"
+                                  class="slot-image ms-0"
+                                  id="Dragable-Item-6"
+                                  draggable="true"
+                                  data-original="true"
+                                  data-item-name="ender_pearl"
+                                />
                               </div>
                               <div class="slot slot-inv" style="visibility: hidden"></div>
                               <div class="slot slot-inv slot-btn MC-BTN-CLICK" id="item-slot-clear" data-tooltip data-title="Clear Items" data-body="Clear all Items in the inventory slots.">
                                 <img src="./Assets/cancel.png" alt="Clear" class="slot-image" />
                               </div>
                             </div>
-                            <div class="hstack mt-2 p-2 rounded-2 fw-bold" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 0.8rem; text-align: center;">
-                              <small id="inventory-instruction-text">
-                                You can drag and drop the items into the inventory slots. Try to match the correct patterns to unlock special skills!
-                              </small>
+                            <div class="hstack mt-2 p-2 rounded-2 fw-bold" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 0.8rem; text-align: center">
+                              <small id="inventory-instruction-text"> You can drag and drop the items into the inventory slots. Try to match the correct patterns to unlock special skills! </small>
                             </div>
                           </div>
                         </div>
