Add recipe and tooltip data for various development skills; enhance hint sidebar styles and functionality

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <!-- Acheivement Toast Container -->
       <!-- Main Content Container -->
       <div class="tooltips-Container position-relative">
-        <div class="tooltip position-fixed" id="tooltip" style="display: none; pointer-events: none; z-index: 1070; top: 0; left: 0">
+        <div class="tooltip position-fixed" id="tooltip" style="display: none; pointer-events: none; z-index: 1090; top: 0; left: 0">
           <div class="tooltip-header text-warning" id="tooltip-header">Title</div>
           <div class="tooltip-body text-secondary" id="tooltip-body">Body</div>
         </div>
@@ -116,8 +116,15 @@
                               <div class="slot MC-BTN-CLICK leggings-slot" style="width: 48px; height: 48px" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
                               <div class="slot MC-BTN-CLICK boots-slot" style="width: 48px; height: 48px" data-tooltip data-title="Title Placeholder" data-body="Body Placeholder"></div>
                               <div class="slot my-2" style="width: 48px; height: 45px; visibility: hidden">5</div>
-                              <div class="slot d-none" style="width: 48px; height: 48px;">6</div>
-                              <div class="slot slot-btn MC-BTN-CLICK" style="width: 48px; height: 48px;" data-tooltip data-title="Hint" data-body="Get hints and tips to unlock special skills!" id="hint-button">
+                              <div class="slot d-none" style="width: 48px; height: 48px">6</div>
+                              <div
+                                class="slot slot-btn MC-BTN-CLICK"
+                                style="width: 48px; height: 48px"
+                                data-tooltip
+                                data-title="Hint"
+                                data-body="Get hints and tips to unlock special skills!"
+                                id="hint-button"
+                              >
                                 <img src="./Assets/warning_button.png" alt="Clear" class="slot-image" />
                               </div>
                             </div>
