Update loading screen text style and adjust development mode settings

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="PanoramaContainer" class="w-100 vh-100 position-relative overflow-hidden">
       <div id="LoadingScreen" class="loading-overlay d-flex flex-column justify-content-center align-items-center position-fixed top-0 start-0 w-100 h-100 z-1">
         <h1 id="LoadingText" class="text-white mb-3">Loading...</h1>
-        <p id="SubLoadingText" class="position-absolute bottom-0 w-100 text-center pb-2 text-wrap d-none px-5">
+        <p id="SubLoadingText" class="position-absolute bottom-0 w-100 text-center pb-2 text-wrap d-none px-5" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 0.9rem">
           It's taking longer than usual to load the portfolio. This may be due to your internet connection or device performance.
         </p>
       </div>
