--- a/index.html
+++ b/index.html
@@ -352,6 +352,58 @@
               </div>
             </div>
           </div>
+          <div class="modal fade overflow-hidden" id="Modal-2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="Modal-1Label" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-lg modal-fullscreen-sm-down modal-dialog-scrollable">
+              <div class="modal-content rounded-1 mapbox">
+                <div class="modal-header border-bottom-0 pb-0">
+                  <h5 class="modal-title fw-bold text-uppercase pb-0 mb-0" id="Modal-2-HL" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 1.2rem">Contact Me</h5>
+                  <button type="button" class="btn-close MC-BTN-CLICK nofocus" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <!-- Modal 2 For Contact -->
+                  <div class="container-fluid">
+                    <div class="hstack position-relative">
+                      <div class="d-none" style="width: 128px">
+                        <div class="d-flex justify-content-center align-items-center h-100 p-2">
+                          <img src="Assets/Gprofile.gif" alt="Profile Picture" class="img-fluid rounded-2" />
+                        </div>
+                      </div>
+                      <div class="flex-grow-1">
+                        <div class="p-3">
+                          <div class="row g-3 mt-1">
+                            <div class="col-12 col-md-6">
+                              <label for="contact-name" class="form-label fw-bold" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 0.9rem">Name</label>
+                              <input type="text" class="form-control textfield-MC" id="contact-name" placeholder="John Doe" id="contact-name" />
+                            </div>
+                            <div class="col-12 col-md-6">
+                              <label for="contact-email" class="form-label fw-bold" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 0.9rem">Email</label>
+                              <input type="email" class="form-control textfield-MC text-lowercase" id="contact-email" placeholder="john.doe@example.com" id="contact-email" />
+                            </div>
+                            <div class="col-12">
+                              <label for="contact-subject" class="form-label fw-bold" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 0.9rem">Subject</label>
+                              <input type="text" class="form-control textfield-MC" id="contact-subject" placeholder="Subject here..." id="contact-subject" />
+                            </div>
+                            <div class="col-12">
+                              <label for="contact-message" class="form-label fw-bold" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 0.9rem">Message</label>
+                              <textarea class="form-control textfield-MC" id="contact-message" rows="4" placeholder="Your message here..." id="contact-message"></textarea>
+                            </div>
+                            <div class="col-8 d-flex align-items-center">
+                              <div class="w-100 p-2 pb-0 fw-bold text-center text-capitalize text-wrap tooltip-box MCinfo" style="font-family: 'MinecraftiaRegular', sans-serif;" id="contact-info-text"></div>
+                            </div>
+                            <div class="col-4 text-end">
+                              <button type="button" class="n-mc-btn MC-BTN-CLICK" id="contact-submit-button" style="height: 40px; width: 100%;">
+                                <p class="mb-0">Submit</p>
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div id="MainContent" class="position-absolute vh-100 w-100 z-0">
           <div class="container">
@@ -371,7 +423,7 @@
                   <div class="n-mc-btn text-center mb-1 MC-BTN-CLICK" style="height: 45px; max-width: 460px; min-width: none 400px; width: 100%">
                     <p class="mb-0">Projects</p>
                   </div>
-                  <div class="n-mc-btn text-center MC-BTN-CLICK" style="height: 45px; max-width: 460px; min-width: none 400px; width: 100%">
+                  <div class="n-mc-btn text-center MC-BTN-CLICK" style="height: 45px; max-width: 460px; min-width: none 400px; width: 100%" data-bs-toggle="modal" data-bs-target="#Modal-2">
                     <p class="mb-0">Contact</p>
                   </div>
                 </div>
@@ -436,7 +488,7 @@
             data-title="Visitor Counter"
             data-body="Number of visitors who have visited this portfolio website."
           >
-            <div class="position-relative">
+            <div class="position-relative" id="vcounter-container">
               <a href="http://www.freevisitorcounters.com"></a>
               <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=01c85d8adba43a3875e86cd5115b5a26312cc738'></script>
               <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1446660/t/2"></script>
