--- a/index.html
+++ b/index.html
@@ -137,17 +137,17 @@
                               <div class="slot MC-BTN-CLICK chestplate-slot" style="width: 48px; height: 48px" data-tooltip data-title="Skillset Overview" data-body="Skillset & Abilities">
                                 <img src="https://minecraft.wiki/images/Crafting_Table_JE4_BE3.png?5767f" alt="" class="slot-image ms-0" id="Chestplate-Item" draggable="false" />
                               </div>
-                              <div class="slot MC-BTN-CLICK leggings-slot" style="width: 48px; height: 48px" data-tooltip data-title="Education Background" data-body="Education & Qualifications">
+                              <div class="slot MC-BTN-CLICK leggings-slot" style="width: 48px; height: 48px" data-tooltip data-title="Education Background" data-body="Education & Achievements">
                                 <img src="https://minecraft.wiki/images/Enchanted_Book.gif?b21c4" alt="" class="slot-image ms-0" id="Leggings-Item" draggable="false" />
                               </div>
-                              <div class="slot MC-BTN-CLICK boots-slot" style="width: 48px; height: 48px" data-tooltip data-title="Experience" data-body="Work Experience & Goals">
+                              <div class="slot MC-BTN-CLICK boots-slot" style="width: 48px; height: 48px" data-tooltip data-title="Experience" data-body="Work Experience & Certifications">
                                 <img src="https://minecraft.wiki/images/Impulse_Command_Block.gif?fb024" alt="" class="slot-image ms-0" id="Boots-Item" draggable="false" />
                               </div>
                               <div class="slot my-2" style="width: 48px; height: 45px; visibility: hidden">5</div>
                               <div class="slot d-none" style="width: 48px; height: 48px">6</div>
                               <div
-                                class="slot slot-btn MC-BTN-CLICK"
-                                style="width: 48px; height: 48px"
+                                class="slot slot-btn MC-BTN-CLICK hint-btn"
+                                style="width: 48px; height: 48px; visibility: hidden;"
                                 data-tooltip
                                 data-title="Hint"
                                 data-body="Get hints and tips to unlock special skills!"
@@ -177,9 +177,10 @@
                               </div>
                             </div>
                             <div class="ms-5 mt-3">
-                              <h5 class="fw-bold text-uppercase mb-2" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 1rem">Location</h5>
+                              <h5 class="fw-bold text-uppercase mb-2" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 1rem">Location & Languages</h5>
                               <div class="vstack">
                                 <p class="mb-1" style="font-family: 'MinecraftiaRegular', sans-serif; text-align: justify; text-indent: 1rem">Imus City, Cavite, Philippines (GMT +8)</p>
+                                <p class="mb-1" style="font-family: 'MinecraftiaRegular', sans-serif; text-align: justify; text-indent: 1rem">Tagalog, Hiligaynon, & English Speakers</p>
                               </div>
                             </div>
                             <hr />
@@ -324,8 +325,26 @@
                           </div>
                         </div>
                       </div>
-                      <div class="container-fluid mh d-none" id="leggings-content">leggings-content</div>
-                      <div class="container-fluid mh d-none" id="boots-content">boots-content</div>
+                      <div class="container-fluid mh d-none" id="leggings-content">
+                        <div class="row">
+                          <div class="col-12 p-3">
+                            <h5 class="fw-bold text-uppercase mb-2" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 1rem">Education & Achievements</h5>
+                            <div class="vstack">
+                              <p class="mb-1" style="font-family: 'MinecraftiaRegular', sans-serif; text-align: justify; text-indent: 1rem"></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="container-fluid mh d-none" id="boots-content">
+                        <div class="row">
+                          <div class="col-12 p-3">
+                            <h5 class="fw-bold text-uppercase mb-2" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 1rem"> Experience & Certifications</h5>
+                            <div class="vstack">
+                              <p class="mb-1" style="font-family: 'MinecraftiaRegular', sans-serif; text-align: justify; text-indent: 1rem"></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="col-12 tooltip-box p-3">
                       <div class="row g-3">
