Implement progress bar visibility toggle and skill expiration checks; enhance modal layout and animations

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                   <button type="button" class="btn-close MC-BTN-CLICK nofocus" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <div class="row g-0">
-                    <div class="col-12 col-md-12 col-xl-4" style="height: 330px">
+                  <div class="row">
+                    <div class="col-12 col-md-12 col-xl-4" style="height: 300px">
                       <div class="container-fluid h-100 w-100 d-flex justify-content-center align-items-center">
                         <div class="hstack">
                           <div class="char-Box" id="char-box">
@@ -160,12 +160,12 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-12 col-md-12 col-xl-8 d-flex flex-column custom-box box-rev">
+                    <div class="col-12 col-md-12 col-xl-8 d-flex flex-column custom-box box-rev my-3">
                       <div class="container-fluid mh" id="helmet-content" style="overflow-y: auto">
                         <div class="row">
                           <div class="col-12 p-3">
                             <div>
-                              <h5 class="fw-bold text-uppercase mb-2" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 1rem">Profile</h5>
+                              <h5 class="fw-bold text-uppercase mb-2" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 1rem">Profile <small class="text-secondary fw-light text-lowercase">Temporary Info (Will be updated soon)</small></h5>
                               <div class="vstack">
                                 <p class="mb-1" style="font-family: 'MinecraftiaRegular', sans-serif; text-align: justify; text-indent: 1rem">
                                   <span class="fw-bolder">Name:</span> Ryan James V. Capadocia
@@ -346,11 +346,11 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-12 tooltip-box p-3">
-                      <div class="row g-3">
-                        <div class="col-md-6">
-                          <p class="text-start mb-3 fw-bold">Most used Programming Languages</p>
-                          <div>
+                    <div class="col-12">
+                      <div class="row border d-flex justify-content-center align-items-center">
+                        <div class="col-12 col-md-6 tooltip-box p-3 MC-pb-container-1">
+                          <p class="text-start fw-bold mb-1">Most used Programming Languages</p>
+                          <div class="MC-pb-1">
                             <span class="mc-lang-label ms-5">PHP</span>
                             <div class="mc-xp-container">
                               <div class="mc-xp-bg">
@@ -359,7 +359,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="mt-2">
+                          <div class="MC-pb-2 mt-2">
                             <span class="mc-lang-label ms-5">JavaScript</span>
                             <div class="mc-xp-container">
                               <div class="mc-xp-bg">
@@ -368,7 +368,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="mt-2">
+                          <div class="MC-pb-3 mt-2">
                             <span class="mc-lang-label ms-5">HTML & CSS</span>
                             <div class="mc-xp-container">
                               <div class="mc-xp-bg">
@@ -378,9 +378,9 @@
                             </div>
                           </div>
                         </div>
-                        <div class="col-md-6">
-                          <p class="text-start mb-3 fw-bold">Most used Frameworks & Libraries</p>
-                          <div>
+                        <div class="col-12 col-md-6 tooltip-box p-3 MC-pb-container-2">
+                          <p class="text-start fw-bold mb-1">Most used Frameworks & Libraries</p>
+                          <div class="MC-pb-1">
                             <span class="mc-lang-label ms-5">Bootstrap</span>
                             <div class="mc-xp-container">
                               <div class="mc-xp-bg">
@@ -389,7 +389,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="mt-2">
+                          <div class="MC-pb-2 mt-2">
                             <span class="mc-lang-label ms-5">jQuery</span>
                             <div class="mc-xp-container">
                               <div class="mc-xp-bg">
@@ -398,7 +398,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="mt-2">
+                          <div class="MC-pb-3 mt-2">
                             <span class="mc-lang-label ms-5">MySQL</span>
                             <div class="mc-xp-container">
                               <div class="mc-xp-bg">
@@ -557,8 +557,8 @@
           >
             <div class="position-relative" id="vcounter-container">
               <a href="http://www.freevisitorcounters.com"></a>
-              <!-- <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=01c85d8adba43a3875e86cd5115b5a26312cc738'></script>
-              <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1446660/t/2"></script> -->
+              <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=01c85d8adba43a3875e86cd5115b5a26312cc738'></script>
+              <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1446660/t/2"></script>
             </div>
           </div>
           <div class="position-absolute bottom-0 start-50 translate-middle-x mb-3 w-100 d-none d-md-block">
